# discover-plugins

./: pyproject.toml
.github/workflows/: main.yml
src/: discover_plugins.py
tests/: test_discover_plugins.py  test_module.py
