[project]
name = "discover-plugins"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [
  { name = "Felix Scherz", email = "felixwscherz@gmail.com" },
]

[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.urls]
Documentation = "https://github.com/felixscherz/discover-plugins#readme"
Issues = "https://github.com/felixscherz/discover-plugins/issues"
Source = "https://github.com/felixscherz/discover-plugins"
